Change alignment of stop screen text. Incrase alert font size

--- a/src/app/home/stop/stop.page.scss
+++ b/src/app/home/stop/stop.page.scss
@@ -1,6 +1,5 @@
 p {
   color: var(--ion-color-secondary);
-  width: 262px;
   font-size: 48px;
   line-height: 48px;
 
@@ -11,15 +10,16 @@ p {
 
 
 #para-one {
-  margin: 24px;
+  margin: 36px 24px 24px 24px;
 }
 
 #para-two {
-  margin-left: 102px;
+  margin: 24px;
+  text-align: right;
 }
 
 #para-three {
-  margin-left: 57px;
+  margin: 24px;
 }
 
 #btn-wrapper {
@@ -32,4 +32,12 @@ p {
   & ion-button {
     max-width: 45vw;
   }
+}
+
+.my-custom-class #alert-2-msg {
+  font-size: 16px;
+}
+
+::ng-deep .alert-message.sc-ion-alert-ios, .alert-input-group.sc-ion-alert-ios {
+  font-size: 16px
 }
